--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
   flutter_card_swipper: ^0.4.0
   shared_preferences: ^2.0.5
   universal_platform: ^0.1.3
+  flutter_svg: ^0.22.0
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "Assets/images/logo.jpg"
 
 dev_dependencies:
   flutter_test:
@@ -49,8 +56,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - Assets/images/transfer.svg
+    - Assets/images/logo.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
